--- a/src/components/Forecast/forecast.less
+++ b/src/components/Forecast/forecast.less
@@ -1,22 +1,71 @@
 .forecast {
   display: flex;
   flex-direction: column;
-  // justify-content: space-between;
+  border-radius: 8px;
+  overflow: hidden;
+  background-color: rgb(239, 246, 250);
+  border: 4px solid white;
+  box-shadow: 2px 2px 16px rgba(45, 45, 45, 0.3);
+
+  .weather-icon:not(.weather-icon--small) {
+    margin-right: 32px;
+  }
 
   &__main {
-    background: beige;
+    padding: 24px 16px;
     width: 100%;
+    box-sizing: border-box;
+    border-bottom: 4px solid white;
+  }
+
+  &__title {
+    text-align: center;
+    font-family: "Alexandria-Thin";
+    font-size: 24px;
+  }
+
+  &__temp {
+    font-family: "Alexandria-Medium";
+
+    &--large {
+      font-size: 38px;
+      margin-bottom: 16px;
+    }
   }
 
   &__weekly {
-    // background: black;
     width: 100%;
-    height: 200px;
+    height: 185px;
+    display: flex;
+    flex-wrap: wrap;
+    box-sizing: border-box;
   }
 
   &__day {
     display: flex;
+    flex: 1 1 0px;
     align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+    flex-grow: 1;
+    border-right: 4px solid white;
+    padding: 24px 0px;
+    
+    &:last-child {
+      border-right: none;
+    }
+  }
+
+  &__status {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+  }
+
+  &__description {
+    display: flex;
+    flex-direction: column;
     justify-content: space-between;
   }
 }
