--- a/src/components/Navbar/navbar.less
+++ b/src/components/Navbar/navbar.less
@@ -2,13 +2,25 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  margin-bottom: 24px;
+  padding: 0 16px;
 
   &__location {
-    background: blue;
+    font-family: "Alexandria-Thin";
+    font-size: 32px;
+    cursor: pointer;
+    flex: 1 1 0px;
 
+    &:nth-child(2) {
+      text-align: center;
+    }
+    &:nth-child(3) {
+      text-align: right;
+    }
+    
     &--active {
-      background: palevioletred;
-      color: white;
+      font-family: "Alexandria-Medium";
+      color: rgb(114, 175, 227);
     }
   }
 }
