--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -1,9 +1,14 @@
 @import './reset.css';
+@import './fonts.less';
+
+body {
+  background-color: rgb(239, 246, 250);
+}
 
 .app {
-  max-width: 400px;
-  background: red;
+  max-width: 600px;
   margin: 0 auto;
+  margin-top: 20px;
 }
 
 @import './components.less';
