--- a/src/components/Navbar/navbar.less
+++ b/src/components/Navbar/navbar.less
@@ -4,6 +4,7 @@
   justify-content: space-between;
   margin-bottom: 24px;
   padding: 0 16px;
+  height: 40px;
 
   &__location {
     font-family: "Alexandria-Thin";
@@ -22,5 +23,12 @@
       font-family: "Alexandria-Medium";
       color: rgb(114, 175, 227);
     }
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .navbar {
+    padding-left: 0px;
+    padding-right: 0px;
   }
 }
