--- a/src/components/WeatherIcon/weather-icon.less
+++ b/src/components/WeatherIcon/weather-icon.less
@@ -11,3 +11,15 @@
     width: 60px;
   }
 }
+
+@media screen and (max-width: 700px) {
+  .weather-icon {
+    height: 140px;
+    width: 140px;
+
+    &--small {
+      height: 40px;
+      width: 40px;
+    }
+  }
+}
