--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -7,8 +7,17 @@ body {
 
 .app {
   max-width: 600px;
+  min-width: 390px;
   margin: 0 auto;
   margin-top: 20px;
+}
+
+@media screen and (max-width: 700px) {
+  .app {
+    max-width: unset;
+    margin-left: 20px;
+    margin-right: 20px;
+  }
 }
 
 @import './components.less';
