--- a/src/components/Forecast/forecast.less
+++ b/src/components/Forecast/forecast.less
@@ -28,6 +28,7 @@
 
     &--large {
       font-size: 32px;
+      margin-bottom: 16px !important;
     }
   }
 
@@ -74,6 +75,35 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    p {
+      text-align: left;
+    }
+  }
+
+  &--no-data {
+    padding: 32px 16px;
+    display: flex;
+    align-items: center;
+
+    p {
+      font-family: "Alexandria-Medium";
+      font-size: 24px;
+      &:last-child {
+        font-family: "Alexandria-Thin";
+        font-size: 16px;
+        margin-top: 16px;
+      }
+    }
+  }
+
+  &__missing-data-icon {
+    height: 200px;
+    width: 200px;
+    background: url('../../../public/icons/missing-data-icon.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    margin-bottom: 24px;
   }
 }
 
@@ -105,5 +135,4 @@
       }
     }
   }
-
 }
