feat: creating api class and loading/error states

--- a/src/styles/components.less
+++ b/src/styles/components.less
@@ -1,3 +1,4 @@
 @import '../components/Navbar/navbar.less';
 @import '../components/Forecast/forecast.less';
 @import '../components/WeatherIcon/weather-icon.less';
+@import '../components/EmptyState/empty-state.less';
