--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -10,6 +10,21 @@ body {
   min-width: 390px;
   margin: 0 auto;
   margin-top: 20px;
+
+  &__loader {
+    margin-top: 100px;
+    margin: 0 auto;
+    width: 100px;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    p {
+      font-family: "Alexandria-Medium";
+      font-size: 24px;
+      margin-top: 32px;
+    }
+  }
 }
 
 @media screen and (max-width: 700px) {
