feat: creating unit selector

--- a/src/styles/components.less
+++ b/src/styles/components.less
@@ -2,3 +2,4 @@
 @import '../components/Forecast/forecast.less';
 @import '../components/WeatherIcon/weather-icon.less';
 @import '../components/EmptyState/empty-state.less';
+@import '../components/UnitSelector/unit-selector.less';
