fix: minor style improvements

--- a/src/components/Forecast/forecast.less
+++ b/src/components/Forecast/forecast.less
@@ -16,6 +16,7 @@
     width: 100%;
     box-sizing: border-box;
     border-bottom: 4px solid white;
+    padding-bottom: 32px;
     .forecast__title {
       margin-bottom: 8px;
     }
@@ -28,7 +29,7 @@
 
     &--large {
       font-size: 32px;
-      margin-bottom: 16px !important;
+      margin-bottom: 24px !important;
     }
   }
 
